--- a/style.css
+++ b/style.css
@@ -1,60 +1,68 @@
 /* Fuentes */
 @font-face {
-    font-family: 'Acumin';
-    src: url('fonts/Acumin-RPro.otf') format('opentype');
+  font-family: "Acumin";
+  src: url("fonts/Acumin-RPro.otf") format("opentype");
+}
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: 'Gilroy', sans-serif;
 }
 
 body {
-    margin: 0;
-    color: #161616;
-    background-color: #F2F0EB; /* Fondo Snow White */
-    font-family: 'Acumin', sans-serif; /* Aplica la fuente globalmente */
+  color: #161616;
+  background-color: #f2f0eb; /* Fondo Snow White */
+  font-family: "Acumin", sans-serif; /* Aplica la fuente globalmente */
 }
 
 header {
-    display: flex;
-    flex-direction: column; /* Cambia la dirección para que sea en columna */
-    align-items: center; /* Centra el contenido horizontalmente */
-    padding: 20px 40px;
-    background-color: #161616; /* Fondo Phantom */
-}
-
-header .logo img {
-    height: 150px;
-    margin-bottom: 10px; /* Reduce el margen inferior */
+  display: flex;
+  flex-direction: column; /* Cambia la dirección para que sea en columna */
+  align-items: center; /* Centra el contenido horizontalmente */
+  padding: 20px 40px;
+  background-color: #161616; /* Fondo Phantom */
 }
 
 header nav ul {
-    list-style: none;
-    display: flex;
-    gap: 20px;
-    padding: 0;
-    margin: 0; /* Elimina cualquier margen superior */
-    justify-content: center;/* Centra el menú */
+  list-style: none;
+  display: flex;
+  gap: 40px; /* Separacion entre referencias */
+  padding: 0;
+  margin: 0; /* Elimina cualquier margen superior */
+  justify-content: center; /* Centra el menú */
 }
-    
 
 header nav ul li a {
-    text-decoration: none;
-    color: #F2F0EB;
-    /* Texto blanco suave */
-    font-family: 'Acumin', sans-serif;
-    font-size: 1rem;
-    transition: color 0.3s ease;
+  text-decoration: none;
+  color: #f2f0eb;  /* Texto blanco suave */
+  font-family: "Acumin", sans-serif;
+  font-size: 1rem;
+  transition: color 0.3s ease;
 }
 
 header nav ul li a:hover {
-    color: #086B45;
-    /* Posy Green */
+  color: #086b45; /* Posy Green */
 }
+  
 
 /* Logo styling */
 .logo img {
-    font-size: 1.5rem;
-    color: #F2F0EB;
-    transition: transform 0.3s ease;
+  height: 80px;
+  color: #f2f0eb;
+  transition: transform 0.3s ease;
 }
 
 .logo:hover img {
-    transform: scale(1.1);
+  transform: scale(1.1);
+}
+
+/*linea divisoria*/
+.divider {
+  width: 110%; /* Ajusta el ancho de la línea */
+  height: 1px;
+  background-color: #e0e0e0;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
