--- a/style.css
+++ b/style.css
@@ -5,17 +5,18 @@
 }
 
 * {
-  box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: 'Gilroy', sans-serif;
 }
 
 body {
   color: #161616;
   background-color: #f2f0eb; /* Fondo Snow White */
-  font-family: "Acumin", sans-serif; /* Aplica la fuente globalmente */
 }
+
+
+
+/* HEADER */
 
 header {
   display: flex;
@@ -23,6 +24,7 @@ header {
   align-items: center; /* Centra el contenido horizontalmente */
   padding: 20px 40px;
   background-color: #161616; /* Fondo Phantom */
+  font-family: "Acumin", sans-serif; /* Aplica la fuente globalmente */
 }
 
 header nav ul {
@@ -37,7 +39,6 @@ header nav ul {
 header nav ul li a {
   text-decoration: none;
   color: #f2f0eb;  /* Texto blanco suave */
-  font-family: "Acumin", sans-serif;
   font-size: 1rem;
   transition: color 0.3s ease;
 }
