--- a/style.css
+++ b/style.css
@@ -10,58 +10,74 @@
 }
 
 body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
   color: #161616;
   background-color: #f2f0eb; /* Fondo Snow White */
 }
-
-
 
 /* HEADER */
 
 header {
   display: flex;
-  flex-direction: column; /* Cambia la dirección para que sea en columna */
-  align-items: center; /* Centra el contenido horizontalmente */
+  flex-direction: column;
+  /* Cambia la dirección para que sea en columna */
+  align-items: center;
+  /* Centra el contenido horizontalmente */
   padding: 20px 40px;
-  background-color: #161616; /* Fondo Phantom */
-  font-family: "Acumin", sans-serif; /* Aplica la fuente globalmente */
+  background-color: #161616;
+  /* Fondo Phantom */
+  font-family: "Acumin", sans-serif;
+  /* Aplica la fuente globalmente */
 }
 
 header nav {
-  margin-top: 5px; /* Ajusta este valor según sea necesario */
+  margin-top: 5px;
+  /* Ajusta este valor según sea necesario */
 }
 
 
 header nav ul {
   list-style: none;
   display: flex;
-  gap: 40px; /* Separacion entre referencias */
+  gap: 40px;
+  /* Separacion entre referencias */
   padding: 0;
-  margin: 0; /* Elimina cualquier margen superior */
-  justify-content: center; /* Centra el menú */
+  margin: 0;
+  /* Elimina cualquier margen superior */
+  justify-content: center;
+  /* Centra el menú */
 
 }
 
 header nav ul li a {
   text-decoration: none;
-  color: #f2f0eb; /* Texto blanco suave */
+  color: #f2f0eb;
+  /* Texto blanco suave */
   font-size: 1rem;
-  position: relative; /* Necesario para el pseudo-elemento */
+  position: relative;
+  /* Necesario para el pseudo-elemento */
 }
 
 header nav ul li a::after {
   content: '';
   position: absolute;
-  bottom: -20px; /* Ubicación de la línea debajo del texto */
+  bottom: -20px;
+  /* Ubicación de la línea debajo del texto */
   left: 0;
-  width: 0; /* Inicialmente, la línea no es visible */
-  height: 2px; /* Grosor de la línea */
-  background-color: #f2f0eb; /* Color de la línea */
+  width: 0;
+  /* Inicialmente, la línea no es visible */
+  height: 2px;
+  /* Grosor de la línea */
+  background-color: #f2f0eb;
+  /* Color de la línea */
 }
 
 header nav ul li a:hover::after {
-  width: 100%; /* Al pasar el cursor, la línea cubre todo el texto */
-}  
+  width: 100%;
+  /* Al pasar el cursor, la línea cubre todo el texto */
+}
 
 /* Logo styling */
 .logo img {
@@ -75,13 +91,116 @@ header nav ul li a:hover::after {
 }
 
 /*linea divisoria*/
-
 .divider {
-  width: 110%; /* Ajusta el ancho de la línea */
+  width: 100vw;
+  /* Ajusta el ancho de la línea */
   height: 1px;
   background-color: #e0e0e0;
   margin-top: 10px;
   margin-bottom: 10px;
 }
 
-/* */
+
+
+/* FOOTER */
+footer {
+  background-color: #244d3c; /* Verde oscuro */
+  color: #f2f0eb; /* Blanco suave */
+  padding: 40px 80px;
+  font-family: "Acumin", sans-serif;
+  margin-top: auto;
+}
+
+.footer-container {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.footer-content img {
+  width: 100px;
+  margin-bottom: 10px;
+}
+
+.footer-content p {
+  font-size: 1rem;
+  line-height: 1.5;
+  max-width: 650px;
+  margin-bottom: 20px;
+}
+
+.footer-redes {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: -10px;
+}
+
+.footer-links {
+  display: flex;
+  gap: 10px;
+  font-size: 1rem;
+  margin-top: 10px;
+}
+
+.footer-links a {
+  color: #f2f0eb;
+  text-decoration: none;
+
+}
+
+.footer-links span {
+  color: #f2f0eb;
+}
+
+.footer-socials {
+  display: flex;  /* Asegura el uso de flexbox */
+  gap: 25px;  /* Aumenta el espacio entre los logos */
+}
+
+.footer-socials a img {
+  width: 25px;
+  height: 25px;
+  transition: transform 0.3s ease;
+}
+
+.footer-socials a:hover img {
+  transform: scale(1.2);
+}
+
+.footer-legal {
+  display: flex;
+  justify-content: space-between;  /* Distribuye el espacio entre los elementos */
+  align-items: center;
+  font-size: 0.9rem;
+  color: #f2f0eb;
+  opacity: 0.3;
+  padding: 20px 0; /* Agrega un poco de padding para separación vertical */
+  margin-bottom: -20px;
+}
+
+.footer-legal p {
+  margin: 0; /* Elimina el margen por defecto del párrafo */
+  
+}
+
+.footer-links {
+  display: flex;
+  gap: 20px; /* Espacio entre los enlaces */
+  
+}
+
+.footer-legal a {
+  color: #f2f0eb;
+  text-decoration: none;
+  /*opacity: 0.5;*/
+}
+
+.divider-line {
+  width: 50wv;/* Ajusta el ancho de la línea */
+  height: 1px;
+  background-color: #f2f0eb;
+  align-items: center;
+  opacity: 0.2;
+}
+
+
