Cambios en las fonts y estilos

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -5,7 +5,7 @@ header {
     align-items: center;
     padding: 20px 40px;
     background-color: #161616;
-    font-family: "Acumin", sans-serif;
+    font-family: "AcuminRPro", sans-serif;
   }
   
   header nav {
